2002-02-19  Don Porter	<dgp@users.sourceforge.net>

	* changes: reversed the order of 8.3.3 changes.

2002-02-15  Don Porter	<dgp@users.sourceforge.net>

	* changes: First draft of Tcl changes for 8.3.5 release.

2002-02-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/scan.test:
	* generic/tclScan.c (Tcl_ScanObjCmd): corrected scan 0x... %x
	handling that didn't accept the 0x as a prelude to a base 16
	number.  [Bug #495213]

2002-02-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* unix/tclUnixChan.c (FileOutputProc): Fixed [bug 465765] reported
	  by Dale Talcott <daletalcott@users.sourceforge.net>. Avoid
	  writing nothing into a file as STREAM based implementations will
	  consider this a EOF (if the file is a pipe). Not done in the
	  generic layer as this type of writing is actually useful to
	  check the state of a socket.

2002-02-05  Don Porter <dgp@users.sourceforge.net>

        * library/http/http.tcl:
        * library/http/pkgIndex.tcl:  Corrected use of http::error when
        ::error was intended.  Bump to http 2.4.2.

2002-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tests/io.test: io-39.22 split into two tests, one platform
	  dependent, the other not. -eofchar is not empty on the windows
	  platform.

2002-01-25  Mo DeJong  <mdejong@users.sourceforge.net>

	Make -eofchar and -translation options read only for
	server sockets. [Bug 496733]

	* generic/tclIO.c (Tcl_GetChannelOption, Tcl_SetChannelOption):
	Instead of returning nothing for the -translation option
	on a server socket, always return "auto". Return the empty
	string enclosed in quotes for the -eofchar option on
	a server socket. Fixup -eofchar usage message so that
	it matches the implementation.
	* tests/io.test: Add -eofchar tests and -translation tests
	to ensure options are read only on server sockets.
	* tests/socket.test: Update tests to account for -eofchar
	and -translation option changes.

2002-01-24  Jeff Hobbs  <jeffh@ActiveState.com>